# multi-agent-damo

./: .env.example  .gitignore  README.md  admin.html  index.html  pyproject.toml  requirements.txt  代码审查报告.md  多Agent设计方案.md  学习文档.md  项目运行说明书.md
scripts/: demo.py
src/multi_agent/: __init__.py  config.py  demo.py  main.py  prompt_loader.py
src/multi_agent/agents/: __init__.py  analyzer.py  base_worker.py  coder.py  pm_agent.py  tester.py
src/multi_agent/api/: __init__.py  routes.py  schemas.py
src/multi_agent/defaults/: __init__.py  prompts.py
src/multi_agent/gateway/: __init__.py  auth.py  router.py
src/multi_agent/graph/: __init__.py  conditions.py  nodes.py  state.py  workflow.py
src/multi_agent/models/: __init__.py  message.py  project.py  prompt.py  task.py
src/multi_agent/notify/: __init__.py  service.py
src/multi_agent/scheduler/: __init__.py  manager.py  models.py  schedule_store.py
src/multi_agent/store/: __init__.py  ddl.py  pg_store.py  project_store.py  prompt_store.py  task_store.py  trace_store.py
src/multi_agent/trace/: __init__.py  langfuse_integration.py
tests/: test_core.py
